--- a/css/index.css
+++ b/css/index.css
@@ -1,2 +1,3 @@
 figcaption { font-weight: bold; }
-a.wikidata-link { border-bottom: none; }
+a, a[href^="http"].wikidata-link { border-bottom: none; }
+a[href^="http"] { border-bottom: 2px solid #333; }
