--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,4 @@ a, a[href^="http"].wikidata-link { border-bottom: none; }
 a[href^="http"] { border-bottom: 2px solid #333; }
 a.wikidata-link { padding-left: 2.2em !important; }
 #link-to-canonical { font-weight: bold; }
+#document-interactions div article h3 { font-weight: bold; }
